--- a/Java script/to_do_app/style.css
+++ b/Java script/to_do_app/style.css
@@ -1,30 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+body{
+    background: url('./todo-bg.png') no-repeat;
+    background-size: cover;
 }
 
-/* header section */
-header .container{
-    background: linear-gradient(178deg, green, #0000009c);
-    font-size: 2.3rem !important;
+
+.left-side{
+    flex-basis: 45%;
+}
+.right-side{
+    flex-basis: 45%;
 }
 
-/* main section */
-.btn-addTask{
-    background: rgb(45 147 45) !important;
-    width:11rem !important;
-}
-
-.task-list li{
-    padding: 15px;
-    font-size: 15px;
-    border:1px solid black;
-    border-radius: 10px;
+li{
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    padding: 5px 8px;
+    border-radius: 10px;
+    background-color: #00684A;
+    color:white;
+    margin-bottom: 10px;
 }
-.task-list i{
-    cursor: pointer;
+li button{
+    background-color: white !important;
+}
+li button:hover{
+    color:black !important;
+    box-shadow: 2px; 
 }
 
