--- a/JavaScript/event_practice/form-validation/style.css
+++ b/JavaScript/event_practice/form-validation/style.css
@@ -1,87 +1,134 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", system-ui;
 }
-body{
+
+body {
     background-color: #1C1544;
 }
-.outer-box{
+
+.outer-box {
     position: relative;
     width: 100%;
     height: 100vh;
 }
-.round-1{
+
+.round-1 {
     position: absolute;
     border-radius: 70px;
-    width:100px;
+    width: 100px;
     height: 100px;
-    left:30%;
+    left: 30%;
     z-index: -1;
-    background:linear-gradient(royalblue,#C20171);
+    background: linear-gradient(royalblue, #C20171);
     filter: blur(3px);
 }
-.round-2{
+
+.round-2 {
     position: absolute;
     border-radius: 100px;
-    width:150px;
+    width: 150px;
     height: 150px;
     bottom: 0;
     right: 50%;
     z-index: -1;
     filter: blur(3px);
-    background:linear-gradient(126deg,royalblue,#C20171);
+    background: linear-gradient(126deg, royalblue, #C20171);
 }
-.round-3{
+
+.round-3 {
     position: absolute;
     border-radius: 700px;
-    width:300px;
+    width: 300px;
     height: 300px;
-    top:30%;
-    left:60%;
+    top: 30%;
+    left: 60%;
     z-index: -1;
-    background:linear-gradient(royalblue,#C20171);
+    background: linear-gradient(royalblue, #C20171);
     filter: blur(3px);
 }
-.round-4{
+
+.round-4 {
     position: absolute;
     border-radius: 700px;
-    width:130px;
+    width: 130px;
     height: 130px;
     bottom: 1%;
-    left:1%;
+    left: 1%;
     z-index: -1;
-    background:linear-gradient(110deg,royalblue,#C20171);
+    background: linear-gradient(110deg, royalblue, #C20171);
     filter: blur(3px);
 }
-.container{
+
+.container {
     position: absolute;
-    top:50%;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
-    width:35% !important;
+    transform: translate(-50%, -50%);
+    width: 35% !important;
     backdrop-filter: blur(10px);
     background-color: #3129544a;
     border: 1px solid rgba(255, 255, 255, 0.833);
     padding: 30px;
 }
-input{
+
+input {
     background-color: transparent !important;
     border: none !important;
     border-radius: 0 !important;
     border-bottom: 1px solid white !important;
+    color: white !important;
+    height: 25px !important;
 }
-label{
-    margin-top: 15px !important;
-    color:white !important;
+
+input:hover {
+    box-shadow: none !important;
+    outline: none !important;
 }
-.btn{
-    width:50%;
+
+label {
+    font-size: medium;
+    /* margin-top: 5px !important; */
+    color: white !important;
+}
+
+.btn {
+    width: 50%;
     background-color: #fff;
-    color:#6b48f5;
+    color: #6b48f5;
     margin: auto;
+}
+
+p {
+    font-size: smaller;
+    color: rgba(255, 0, 0, 0.842);
+    display: none;
+}
+
+.modals {
+    position: absolute;
+    left: 50%;
+    top: 25%;
+    transform: translate(-50%, -50%);
+    border: 2px solid white;
+    color: black;
+    background-color: #fff;
+    border-radius: 20px;
+    padding: 20px;
+    display: none;
+}
+
+.btn-border {
+    border: 2px solid #6b48f5;
+}
+
+@media screen and (max-width:500px) {
+    .container {
+        width: 80% !important;
+    }
 }
 
